--- a/web/index.html
+++ b/web/index.html
@@ -42,15 +42,14 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyBpHoQDyT7afa7PG_Xn9RgMLMYhZA_HbUE",
-      authDomain: "dubz-restaurant.firebaseapp.com",
-      projectId: "dubz-restaurant",
-      storageBucket: "dubz-restaurant.appspot.com",
-      messagingSenderId: "733362896359",
-      appId: "1:733362896359:web:3d5baa13da338a39941142",
-      measurementId: "G-448RN9XP7V"
+      apiKey: "AIzaSyDFgpUFaw-PmnyO27X-Y3MxOq3cmd3iLn0",
+      authDomain: "dinerdubz-official.firebaseapp.com",
+      projectId: "dinerdubz-official",
+      storageBucket: "dinerdubz-official.appspot.com",
+      messagingSenderId: "323152800542",
+      appId: "1:323152800542:web:20d2a27e3c705fcf4f370f",
+      measurementId: "G-9T1RSENPP1"
     };
-
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
